Signup page is finished along with login page

--- a/DestoPesto/DestoPesto/Views/LoginPage.xaml
+++ b/DestoPesto/DestoPesto/Views/LoginPage.xaml
@@ -95,7 +95,7 @@
                                             <ColumnDefinition Width="10*"/>
                                         </Grid.ColumnDefinitions>
                                         <Image Source="facebook.png" />
-                                        <Label Grid.Column="1" Text="{x:Static resources:Properties.Resources.FacebookLogin}" TextColor="#3b5998" FontAttributes="Bold" VerticalOptions="CenterAndExpand" HorizontalOptions="CenterAndExpand"/>
+                                        <Label Grid.Column="1" Text="{x:Static resources:Properties.Resources.FacebookLogin}" TextColor="Black" FontAttributes="Bold" VerticalOptions="CenterAndExpand" HorizontalOptions="CenterAndExpand"/>
                                     </Grid>
                                 </StackLayout>
                             </Frame>
@@ -109,7 +109,7 @@
                                             <ColumnDefinition Width="10*"/>
                                         </Grid.ColumnDefinitions>
                                         <Image Source="google_logo.png"  />
-                                        <Label Grid.Column="1"  Text="{x:Static resources:Properties.Resources.GoogleLogin}"  FontAttributes="Bold" VerticalOptions="CenterAndExpand" HorizontalOptions="CenterAndExpand"/>
+                                        <Label Grid.Column="1"  Text="{x:Static resources:Properties.Resources.GoogleLogin}" TextColor="Black"  FontAttributes="Bold" VerticalOptions="CenterAndExpand" HorizontalOptions="CenterAndExpand"/>
                                     </Grid>
                                 </StackLayout>
                                 <!--<Button  Command="{Binding gogleSignin}" ContentLayout="Top,0" Text="mytext" ImageSource="google_logo.png" />-->
@@ -123,7 +123,7 @@
                                             <ColumnDefinition Width="10*"/>
                                         </Grid.ColumnDefinitions>
                                         <Image Source="applelogo.png"  />
-                                        <Label Grid.Column="1" Text="{x:Static resources:Properties.Resources.AppleLogin}"  FontAttributes="Bold"  VerticalOptions="CenterAndExpand" HorizontalOptions="CenterAndExpand"/>
+                                        <Label Grid.Column="1" Text="{x:Static resources:Properties.Resources.AppleLogin}"  TextColor="Black"  FontAttributes="Bold"  VerticalOptions="CenterAndExpand" HorizontalOptions="CenterAndExpand"/>
                                     </Grid>
                                 </StackLayout>
                             </Frame>
@@ -135,7 +135,7 @@
                                             <ColumnDefinition Width="10*"/>
                                         </Grid.ColumnDefinitions>
                                         <Image Source="email.png"  />
-                                        <Label Grid.Column="1" Text="{x:Static resources:Properties.Resources.EmailLogin}"  FontAttributes="Bold"  VerticalOptions="CenterAndExpand" HorizontalOptions="CenterAndExpand"/>
+                                        <Label Grid.Column="1" Text="{x:Static resources:Properties.Resources.EmailLogin}" TextColor="Black"  FontAttributes="Bold"  VerticalOptions="CenterAndExpand" HorizontalOptions="CenterAndExpand"/>
                                     </Grid>
                                 </StackLayout>
                             </Frame>
@@ -144,7 +144,7 @@
 
 
                     </StackLayout>
-                    <Image Source="logoback.png" HeightRequest="30"  HorizontalOptions="Center" VerticalOptions="EndAndExpand"/>
+                    <Image Source="logoback.png" HeightRequest="30"  HorizontalOptions="Center" VerticalOptions="CenterAndExpand"/>
 
                 </StackLayout>
 
