--- a/DestoPesto/DestoPesto/Views/CategoryButton.xaml
+++ b/DestoPesto/DestoPesto/Views/CategoryButton.xaml
@@ -23,13 +23,15 @@
 
             <!--  Text Label  -->
             <Grid InputTransparent="True"   VerticalOptions="Center">
-                <Grid.ColumnDefinitions>
-                    <!--<ColumnDefinition Width="1"/>-->
+                <!--<Grid.ColumnDefinitions>
                     <ColumnDefinition Width="Auto"/>
                     <ColumnDefinition Width="*"/>
-                    <!--<ColumnDefinition Width="1"/>-->
-                </Grid.ColumnDefinitions>
-                <Label Grid.Column="1"  x:Name="label" x:FieldModifier="public" FontSize="Small" LineBreakMode="WordWrap" Margin="0,0,2,0" HorizontalOptions="StartAndExpand" />
+                </Grid.ColumnDefinitions>-->
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="*"/>
+                    <RowDefinition Height="2*"/>
+                </Grid.RowDefinitions>
+
                 <!--  Icon Image  -->
 
 
@@ -41,8 +43,8 @@
                                                            AbsoluteLayout.LayoutFlags="All" />-->
 
                 <!--<Label VerticalOptions="Center" HorizontalOptions="Center" Grid.Column="2" Text="20"></Label>-->
-                <Image   x:Name="image" x:FieldModifier="public" Grid.Column="0"  Margin="2,0,0,0" HeightRequest="20" WidthRequest="20" InputTransparent="True" HorizontalOptions="End" Source="{Binding Path=IconUrl}" VerticalOptions="Center"  />
-
+                <Image   x:Name="image" x:FieldModifier="public" HeightRequest="20" WidthRequest="20" InputTransparent="True"  HorizontalOptions="Center" Source="{Binding Path=IconUrl}" VerticalOptions="Center"  />
+                <Label Grid.Row="1" x:Name="label" x:FieldModifier="public" FontSize="Small" LineBreakMode="WordWrap" HorizontalTextAlignment="Center" VerticalTextAlignment="Center"/>
             </Grid>
 
 
