--- a/DestoPesto/DestoPesto/Views/ItemsPage.xaml
+++ b/DestoPesto/DestoPesto/Views/ItemsPage.xaml
@@ -2,7 +2,7 @@
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="DestoPesto.Views.ItemsPage"
-             Title="Settings"
+            Title="{x:Static resources:Properties.Resources.SettingItemText}" 
             xmlns:resources="clr-namespace:DestoPesto"
              x:Name="BrowseItemsPage">
 
@@ -23,16 +23,16 @@
 
         </Grid.RowDefinitions>
         <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="*" />
+            
             <ColumnDefinition Width="*" />
             <ColumnDefinition Width="8*" />
             <ColumnDefinition Width="2*" />
-            <ColumnDefinition Width="*" />
+            
         </Grid.ColumnDefinitions>
 
-        <Image   Grid.Column="1" Grid.Row="1"    Source="wifi.png" VerticalOptions="CenterAndExpand" HorizontalOptions="StartAndExpand"></Image>
-        <Label Grid.Column="2" Grid.Row="1" Text="{x:Static resources:Properties.Resources.sendDataWifi}" TextColor="#0D6EFD" FontSize="Medium" VerticalOptions="CenterAndExpand" HorizontalOptions="StartAndExpand"/>
-        <Switch Grid.Column="3" Grid.Row="1" x:Name="toggle" VerticalOptions="CenterAndExpand" Scale="1.5" IsToggled="true" AnchorY="1" HorizontalOptions="EndAndExpand" Toggled="Switch_Toggled" />
+        <Image    Grid.Row="1"    Source="wifi.png" VerticalOptions="CenterAndExpand" HorizontalOptions="EndAndExpand" Margin="10,0,0,0"></Image>
+        <Label Grid.Column="1" Grid.Row="1" Text="{x:Static resources:Properties.Resources.sendDataWifi}" TextColor="#0D6EFD" FontSize="Medium" VerticalOptions="CenterAndExpand" HorizontalOptions="StartAndExpand"/>
+        <Switch Grid.Column="2" Grid.Row="1" x:Name="toggle" VerticalOptions="CenterAndExpand" Scale="1.5" IsToggled="true" AnchorY="1" HorizontalOptions="StartAndExpand" Margin="0,0,10,0" Toggled="Switch_Toggled" />
 
     </Grid>
 
