--- a/DestoPesto/DestoPesto/Views/SignInPage.xaml
+++ b/DestoPesto/DestoPesto/Views/SignInPage.xaml
@@ -37,13 +37,13 @@
 
                 </StackLayout>
 
-                <Button Text="{x:Static resources:Properties.Resources.SigninText}" x:Name="btnSignIn" Clicked="btnSignIn_Clicked" BackgroundColor="#0D6EFD" TextColor="White" CornerRadius="6" />
+                <Button Text="{x:Static resources:Properties.Resources.SigninText}" x:Name="btnSignIn" Clicked="btnSignIn_Clicked" BackgroundColor="#0D6EFD" TextColor="White" CornerRadius="6" TextTransform="None"/>
                 <StackLayout Orientation="Horizontal" HorizontalOptions="CenterAndExpand">
                     <Label Text="{x:Static resources:Properties.Resources.CreateAccountText}" TextColor="DarkGray" FontSize="Small"/>
                     <Label Text="{x:Static resources:Properties.Resources.SignUpText}"  TextColor="#0D6EFD" x:Name="lblSignup"  FontAttributes="Bold" FontSize="Small"/>
                 </StackLayout>
 
-                <StackLayout Margin="0,25,0,0" Padding="0">
+                <!--<StackLayout Margin="0,25,0,0" Padding="0">
                     <Grid>
                         <BoxView BackgroundColor="#828282" HeightRequest="1" WidthRequest="150"  HorizontalOptions="Center" VerticalOptions="Center"/>
                         <Frame BackgroundColor="White" HeightRequest="45" WidthRequest="45" CornerRadius="45" HasShadow="False" BorderColor="DarkGray" Margin="0" HorizontalOptions="Center" Padding="0">
@@ -51,9 +51,9 @@
                             <Label Text="{x:Static resources:Properties.Resources.seprationSimpleText}" TextColor="DarkGray" FontSize="Medium" VerticalTextAlignment="Center" HorizontalTextAlignment="Center"/>
                         </Frame>
                     </Grid>
-                </StackLayout>
+                </StackLayout>-->
             </StackLayout>
-            
+
         </StackLayout>
     </ContentPage.Content>
 </ContentPage>
