--- a/DestoPesto/DestoPesto/Views/SubmisionPopupPage.xaml
+++ b/DestoPesto/DestoPesto/Views/SubmisionPopupPage.xaml
@@ -18,40 +18,49 @@
                                    ScaleOut="0.8" />
     </pages:PopupPage.Animation>
     <!--  You can use any elements here which are extended from Xamarin.Forms.View  -->
-    <Frame Margin="10" CornerRadius="5" 
-           HorizontalOptions="Fill" 
+    <Frame CornerRadius="5" 
+           HorizontalOptions="Center" 
            VerticalOptions="Center"
            HasShadow="True"
-           IsClippedToBounds="True"
-           Padding="0">
-        <Grid Padding="15">
+           HeightRequest="400"
+           Padding="0"
+           
+           
+           >
+        <Grid >
             <Grid.RowDefinitions>
-                <RowDefinition Height="60"/>
-                <RowDefinition/>
-                <RowDefinition Height="60"/>
+                <RowDefinition Height="*"/>
+                <RowDefinition Height="*"/>
+                <RowDefinition Height="2*"/>
+                <RowDefinition Height="*"/>
             </Grid.RowDefinitions>
-            <Label Text="{Binding Description}"></Label>
-            <Grid Padding="10,20,10,20" Grid.Row="1">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="*"/>
+                <ColumnDefinition Width="10*"/>
+                <ColumnDefinition Width="*"/>
+            </Grid.ColumnDefinitions>
+            <StackLayout BackgroundColor="#0D6EFD" Grid.ColumnSpan="3">
+                <Image HeightRequest="40" Grid.Column="1" HorizontalOptions="CenterAndExpand" InputTransparent="True" Source="logo_landscape_blue_back.png" VerticalOptions="CenterAndExpand" AbsoluteLayout.LayoutFlags="SizeProportional" />
+            </StackLayout>
+            <Label Grid.Row="1"  Grid.Column="1" Text="{Binding Description}" FontAttributes="Bold" HorizontalTextAlignment="Center" FontSize="Header" VerticalOptions="Center" HorizontalOptions="Center" LineBreakMode="WordWrap"></Label>
+            <!--<Grid Padding="10,20,10,20" Grid.Row="1">-->
 
-                <Image  x:Name="backgroundImage" Source="{Binding SubmisionThumb}" AbsoluteLayout.LayoutBounds="0,0,1,1"   AbsoluteLayout.LayoutFlags="All" HorizontalOptions="FillAndExpand" VerticalOptions="FillAndExpand" Aspect="AspectFill">
-
-                    <Image.GestureRecognizers>
-                        <TapGestureRecognizer
-                Tapped="OnImageNameTapped"
-                NumberOfTapsRequired="1" />
-                    </Image.GestureRecognizers>
-                </Image>
-            </Grid>
-            <Grid Grid.Row="2">
+            <Image Grid.Row="2" Grid.Column="1" x:Name="backgroundImage" Source="{Binding SubmisionThumb}" AbsoluteLayout.LayoutFlags="PositionProportional"  HorizontalOptions="CenterAndExpand" VerticalOptions="CenterAndExpand" Aspect="AspectFill">
+                <Image.GestureRecognizers>
+                    <TapGestureRecognizer Tapped="OnImageNameTapped" NumberOfTapsRequired="1" />
+                </Image.GestureRecognizers>
+            </Image>
+            <!--</Grid>-->
+            <!--<Grid Grid.Row="2">
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition/>
                     <ColumnDefinition/>
                 </Grid.ColumnDefinitions>
-                <Grid >
-                    <Label  Text="{Binding Comments}" ></Label>
+                <Grid >-->
+            <Label Grid.Row="3" Grid.Column="1" Text="{Binding Comments}" HorizontalTextAlignment="Center" VerticalOptions="Center" HorizontalOptions="Center" LineBreakMode="WordWrap"></Label>
 
-                </Grid>
-            </Grid>
+                <!--</Grid>
+            </Grid>-->
         </Grid>
 
     </Frame>
