--- a/DestoPesto/DestoPesto/Views/LoginPage.xaml
+++ b/DestoPesto/DestoPesto/Views/LoginPage.xaml
@@ -3,7 +3,7 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:d="http://xamarin.com/schemas/2014/forms/design"
              xmlns:resources="clr-namespace:DestoPesto"
-             
+                xmlns:xct="clr-namespace:Xamarin.CommunityToolkit.Effects;assembly=Xamarin.CommunityToolkit"             
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:local="clr-namespace:DestoPesto.CustomRenderer"
              mc:Ignorable="d"
