--- a/DestoPesto/DestoPesto/Views/SignInPage.xaml
+++ b/DestoPesto/DestoPesto/Views/SignInPage.xaml
@@ -1,11 +1,18 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+              xmlns:xct="http://xamarin.com/schemas/2020/toolkit"
              xmlns:resources="clr-namespace:DestoPesto"
-             xmlns:xct="http://xamarin.com/schemas/2020/toolkit"
              Shell.NavBarIsVisible="False"
              x:Class="DestoPesto.Views.SignInPage">
+    <ContentPage.Resources>
+        <Style x:Key="InvalidEntryStyle" TargetType="Entry">
+            <Setter Property="TextColor" Value="Red" />
+        </Style>
+    </ContentPage.Resources>
     <ContentPage.Content>
+
+
         <StackLayout>
 
             <Image Source="{AppThemeBinding Light=login_header.png, Dark=login_header.png}"  />
@@ -18,10 +25,13 @@
                             <Image Source="mail.png" Aspect="AspectFill" Margin="0"/>
                         </Frame>
 
-                        <Entry Placeholder="{x:Static resources:Properties.Resources.EmailPlaceHolder}" x:Name="txtEmail" TextColor="Black" FontAttributes="None" HorizontalOptions="FillAndExpand" Margin="0,0,20,0" Keyboard="Email" TextChanged="txtEmail_TextChanged">
-                            <!--<Entry.Behaviors>
-                                <xct:EmailValidationBehavior x:Name="EmailValidator" DecorationFlags="Trim" InvalidStyle="{x:Static resources:Properties.Resources.InvalidEntryStyle}"/>
-                            </Entry.Behaviors>-->
+                        <Entry Placeholder="{x:Static resources:Properties.Resources.EmailPlaceHolder}" x:Name="txtEmail" HorizontalOptions="FillAndExpand" Margin="0,0,20,0" Keyboard="Email" >
+                            <Entry.Behaviors>
+                                <xct:MultiValidationBehavior x:Name="EmailMultiValidator" InvalidStyle="{StaticResource  InvalidEntryStyle}"  Flags="ValidateOnValueChanging">
+                                    <xct:EmailValidationBehavior x:Name="EmailValidator" DecorationFlags="Trim" />
+                                    <xct:TextValidationBehavior x:Name="EmailTextLenghtValidator" MinimumLength="1"/>
+                                </xct:MultiValidationBehavior>
+                            </Entry.Behaviors>
                         </Entry>
                     </StackLayout>
                 </Frame>
@@ -37,7 +47,11 @@
                         <Frame HeightRequest="40" WidthRequest="40" CornerRadius="6" Padding="0" Margin="5">
                             <Image Source="key.png" Aspect="AspectFill" Margin="0"/>
                         </Frame>
-                        <Entry Placeholder="{x:Static resources:Properties.Resources.PasswordPlaceHolder}"  x:Name="txtPassword" PlaceholderColor="Gray"  IsPassword="True" TextColor="Black" FontAttributes="None" HorizontalOptions="FillAndExpand" Margin="0,0,20,0" TextChanged="txtPassword_TextChanged"/>
+                        <Entry Placeholder="{x:Static resources:Properties.Resources.PasswordPlaceHolder}"  x:Name="txtPassword" PlaceholderColor="Gray"  IsPassword="True" TextColor="Black" FontAttributes="None" HorizontalOptions="FillAndExpand" Margin="0,0,20,0" TextChanged="txtPassword_TextChanged">
+                            <Entry.Behaviors>
+                                <xct:TextValidationBehavior x:Name="PasswordValidator"  DecorationFlags="Trim" MinimumLength="1" Flags="ValidateOnValueChanging"/>
+                            </Entry.Behaviors>
+                        </Entry>
                     </StackLayout>
                 </Frame>
                 <StackLayout  Orientation="Horizontal">
@@ -51,7 +65,7 @@
 
                 </StackLayout>
 
-                <Button Text="{x:Static resources:Properties.Resources.SigninText}" x:Name="btnSignIn" Clicked="btnSignIn_Clicked" BackgroundColor="#0D6EFD" TextColor="White" CornerRadius="6" TextTransform="None"/>
+                <Button Text="{x:Static resources:Properties.Resources.SigninText}" x:Name="btnSignIn" Clicked="btnSignIn_Clicked" BackgroundColor="#0D6EFD" TextColor="White" CornerRadius="6" TextTransform="None" IsEnabled="{Binding IsValid, Source={x:Reference  EmailMultiValidator}}" />
                 <StackLayout Orientation="Horizontal" HorizontalOptions="CenterAndExpand">
                     <Label Text="{x:Static resources:Properties.Resources.CreateAccountText}" TextColor="DarkGray" FontSize="Small"/>
                     <Label Text="{x:Static resources:Properties.Resources.SignUpText}"  TextColor="#0D6EFD" x:Name="lblSignup"  FontAttributes="Bold" FontSize="Small"/>
