--- a/DestoPesto/DestoPesto/Views/SignupPage.xaml
+++ b/DestoPesto/DestoPesto/Views/SignupPage.xaml
@@ -52,7 +52,7 @@
                             </Frame>
 
 
-                            <Entry Placeholder="{x:Static resources:Properties.Resources.EmailPlaceHolder}" x:Name="txtEmail"  HorizontalOptions="FillAndExpand" >
+                            <Entry Placeholder="{x:Static resources:Properties.Resources.EmailPlaceHolder}" x:Name="txtEmail"  HorizontalOptions="FillAndExpand" TextChanged="txt_TextChanged">
                                 <Entry.Behaviors>
                                     <xct:MultiValidationBehavior x:Name="EmailMultiValidator" InvalidStyle="{StaticResource  InvalidEntryStyle}"  Flags="ValidateOnValueChanging">
                                         <xct:EmailValidationBehavior x:Name="EmailValidator" DecorationFlags="Trim" />
@@ -69,9 +69,9 @@
                             <Frame HeightRequest="40" WidthRequest="40" CornerRadius="6" Padding="0"  Margin="5">
                                 <Image Source="password.png" />
                             </Frame>
-                            <Entry Placeholder="{x:Static resources:Properties.Resources.PasswordPlaceHolder}" x:Name="txtPassword"  IsPassword="True" HorizontalOptions="FillAndExpand" >
+                            <Entry Placeholder="{x:Static resources:Properties.Resources.PasswordPlaceHolder}" x:Name="txtPassword"  IsPassword="True" HorizontalOptions="FillAndExpand" TextChanged="txt_TextChanged">
                                 <Entry.Behaviors>
-                                    <xct:TextValidationBehavior  MinimumLength="6" InvalidStyle="{StaticResource InvalidEntryStyle}"  Flags="ValidateOnValueChanging"/>
+                                    <xct:TextValidationBehavior x:Name="PasswordValidator" MinimumLength="6" InvalidStyle="{StaticResource InvalidEntryStyle}"  Flags="ValidateOnValueChanging"/>
                                 </Entry.Behaviors>
                             </Entry>
                         </StackLayout>
@@ -82,9 +82,9 @@
                             <Frame HeightRequest="40" WidthRequest="40" CornerRadius="6" Padding="0"  Margin="5">
                                 <Image Source="password.png" />
                             </Frame>
-                            <Entry Placeholder="{x:Static resources:Properties.Resources.RePasswordPlaceHolder}" x:Name="txtReTypePassword"  IsPassword="True" HorizontalOptions="FillAndExpand" >
+                            <Entry Placeholder="{x:Static resources:Properties.Resources.RePasswordPlaceHolder}" x:Name="txtReTypePassword"  IsPassword="True" HorizontalOptions="FillAndExpand" TextChanged="txt_TextChanged">
                                 <Entry.Behaviors>
-                                    <xct:RequiredStringValidationBehavior x:Name="PasswordValidator" InvalidStyle="{StaticResource InvalidEntryStyle}"   RequiredString="{Binding Source={x:Reference txtPassword}, Path=Text}" Flags="ValidateOnValueChanging"/>
+                                    <xct:RequiredStringValidationBehavior x:Name="RePasswordValidator" InvalidStyle="{StaticResource InvalidEntryStyle}"   RequiredString="{Binding Source={x:Reference txtPassword}, Path=Text}" Flags="ValidateOnValueChanging"/>
                                 </Entry.Behaviors>
                             </Entry>
                         </StackLayout>
@@ -96,7 +96,7 @@
                                 <Image Source="user.png" />
                             </Frame>
 
-                            <Entry Placeholder="{x:Static resources:Properties.Resources.UserNameText}" x:Name="txtDOB"  PlaceholderColor="Gray"  HorizontalOptions="FillAndExpand" >
+                            <Entry Placeholder="{x:Static resources:Properties.Resources.UserNameText}" x:Name="txtDOB"  PlaceholderColor="Gray"  HorizontalOptions="FillAndExpand" TextChanged="txt_TextChanged">
                                 <Entry.Behaviors >
                                     <xct:TextValidationBehavior x:Name="UserValidator" MinimumLength="1"/>
                                 </Entry.Behaviors>
